syntax = "proto3";
package documentprocessor;
option go_package = "doc-translate-go/gen/go/documentprocessor;documentprocessor";

service DocumentProcessor {
        rpc ProcessDocument(DocumentRequest) returns (DocumentResponse);
}

message DocumentRequest {
        optional bytes document = 1;
        string sourceLang = 2;
        string targetLang = 3;
}

message DocumentResponse {
        optional bytes document = 1;
}
